<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="24dp"
        android:background="@drawable/light_corner_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <EditText
            android:id="@+id/search_et"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:background="@drawable/search_bar_bg"
            app:layout_constraintEnd_toStartOf="@id/search_btn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <Button
            android:id="@+id/search_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/Search"
            android:textAllCaps="false"
            android:paddingRight="8dp"
            android:drawableLeft="@drawable/ic_search_white_24dp"
            android:paddingLeft="8dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/search_btn_bg"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:textSize="16dp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:background="@drawable/light_corner_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_et">

            <TextView
                android:id="@+id/item1"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:textSize="14dp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:text="@string/outstandingPaymentItem1"
                app:layout_constraintEnd_toStartOf="@+id/item2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/item2"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:textSize="14dp"
                android:textColor="@color/colorBlack"
                android:text="@string/outstandingPaymentItem2"
                app:layout_constraintEnd_toStartOf="@+id/item3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/item1"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/item3"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:textSize="14dp"
                android:textColor="@color/colorBlack"
                android:text="@string/outstandingPaymentItem3"
                app:layout_constraintEnd_toStartOf="@+id/item4"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/item2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/item4"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:textSize="14dp"
                android:textColor="@color/colorBlack"
                android:text="@string/outstandingPaymentItem4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/item3"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/OutstandingPayment_rv"
                android:layout_width="match_parent"
                android:layout_margin="3dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/item1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>