<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundGravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/backgroundColor"
        >
        <TextView
            android:id="@+id/DepositHistory_tv"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/round_corner_white"
            android:elevation="@dimen/elevation"
            android:gravity="center"
            android:text="@string/walletFragmentItem1"
            android:textColor="@color/colorBlack"
            android:shadowColor="@color/colorBlack"
            android:shadowDx="0"
            android:shadowDy="0"
            android:layout_marginTop="16dp"
            android:layout_marginRight="@dimen/walletItemMargin"
            android:layout_marginLeft="@dimen/walletItemMargin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <TextView
            android:id="@+id/WithdrawAmounts_tv"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/round_corner_white"
            android:elevation="@dimen/elevation"
            android:gravity="center"
            android:text="@string/walletFragmentItem2"
            android:textColor="@color/colorBlack"
            android:shadowColor="@color/colorBlack"
            android:shadowDx="0"
            android:shadowDy="0"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="@dimen/walletItemMargin"
            android:layout_marginLeft="@dimen/walletItemMargin"
            app:layout_constraintTop_toBottomOf="@id/DepositHistory_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <TextView
            android:id="@+id/IncomeHistory_tv"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/round_corner_white"
            android:elevation="@dimen/elevation"
            android:gravity="center"
            android:text="@string/walletFragmentItem3"
            android:textColor="@color/colorBlack"
            android:shadowColor="@color/colorBlack"
            android:shadowDx="0"
            android:shadowDy="0"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="@dimen/walletItemMargin"
            android:layout_marginLeft="@dimen/walletItemMargin"
            app:layout_constraintTop_toBottomOf="@id/WithdrawAmounts_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/OutstandingPayment_tv"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/round_corner_white"
            android:elevation="@dimen/elevation"
            android:gravity="center"
            android:text="@string/walletFragmentItem4"
            android:textColor="@color/colorBlack"
            android:shadowColor="@color/colorBlack"
            android:shadowDx="0"
            android:shadowDy="0"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="@dimen/walletItemMargin"
            android:layout_marginLeft="@dimen/walletItemMargin"
            app:layout_constraintTop_toBottomOf="@id/IncomeHistory_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>