<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundColor"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Pending_cl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/headerHeight"
        android:layout_marginTop="16dp"
        android:background="@color/colorWhite"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/Pending_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orderFragmentItem1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/orderItemMargin"
            android:textSize="18dp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            />
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_chevron_right_black_24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Approved_cl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/headerHeight"
        android:layout_marginTop="8dp"
        android:background="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@id/Pending_cl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/Approved_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orderFragmentItem2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/orderItemMargin"
            android:textSize="18dp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            />
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_chevron_right_black_24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Unpaid_cl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/headerHeight"
        android:layout_marginTop="8dp"
        android:background="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@id/Approved_cl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/Unpaid_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orderFragmentItem3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/orderItemMargin"
            android:textSize="18dp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            />
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_chevron_right_black_24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/TobeShipped_cl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/headerHeight"
        android:layout_marginTop="8dp"
        android:background="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@id/Unpaid_cl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/TobeShipped_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orderFragmentItem4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/orderItemMargin"
            android:textSize="18dp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            />
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_chevron_right_black_24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Shipped_cl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/headerHeight"
        android:layout_marginTop="8dp"
        android:background="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@id/TobeShipped_cl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/Shipped_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orderFragmentItem5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/orderItemMargin"
            android:textSize="18dp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            />
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_chevron_right_black_24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/TobeReviewed_cl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/headerHeight"
        android:layout_marginTop="8dp"
        android:background="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@id/Shipped_cl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/TobeReviewed_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orderFragmentItem6"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/orderItemMargin"
            android:textSize="18dp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            />
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_chevron_right_black_24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/InDispute_cl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/headerHeight"
        android:layout_marginTop="8dp"
        android:background="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@id/TobeReviewed_cl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/InDispute_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orderFragmentItem7"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/orderItemMargin"
            android:textSize="18dp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            />
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_chevron_right_black_24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>