<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBlack">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:src="@drawable/whitelogo"
        app:layout_constraintBottom_toTopOf="@+id/constraintlayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerActivityItem1"
            android:textColor="@color/colorRegisterText"
            android:textStyle="bold"
            android:textSize="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/email_register_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:textColor="@color/colorWhite"
            android:paddingLeft="15dp"
            android:background="@drawable/register_round_corner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView1" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerActivityItem2"
            android:textColor="@color/colorRegisterText"
            android:textStyle="bold"
            android:textSize="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/email_register_et"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/password_register_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:inputType="textPassword"
            android:textColor="@color/colorWhite"
            android:paddingLeft="15dp"
            android:background="@drawable/register_round_corner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerActivityItem3"
            android:textColor="@color/colorRegisterText"
            android:textStyle="bold"
            android:textSize="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/password_register_et"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/tokenKey_register_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:textColor="@color/colorWhite"
            android:paddingLeft="15dp"
            android:background="@drawable/register_round_corner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView3" />

        <Button
            android:id="@+id/login_register_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/colorRegisterText"
            android:textSize="18dp"
            app:layout_constraintTop_toBottomOf="@id/tokenKey_register_et"
            android:background="@drawable/register_round_corner"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/registerActivityButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>